Fixed the CMIS Connectors test suite adding a patched CMIS Server WAR (CONNECTORS-1705)
git-svn-id: https://svn.apache.org/repos/asf/manifoldcf/trunk@1900112 13f79535-47bb-0310-9956-ffa450edef68